--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DATABASE_URL=postgres://sizehunt:sizehunt@localhost:5433/sizehunt?sslmode=disable
-JWT_SECRET=supersecret
+JWT_SECRET=supersecretkey12345678901234567890123456
+ENCRYPTION_SECRET=supersecretkey123456789012345678
